<resources>
	<string name="app_name">QR Code Scanner</string>
	<string name="add">add</string>
	<string name="name">Name</string>
	<string name="quantity">Quantity</string>
	<string name="price">Price</string>
	<string name="price_per_unit">Price Per Unit</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="bill">bill</string>
	<string name="product_id">Product ID</string>
	<string name="short_description">Short Description</string>
</resources>