<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	>
	<ImageView
		android:layout_gravity="center"
		android:layout_width="80sp"
		android:layout_height="80sp"
		android:src="@null"
		android:contentDescription="@null"
		android:layout_marginStart="10sp"
		android:id="@+id/image"
	/>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="10sp"
		android:orientation="vertical">
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView
				android:layout_width="90sp"
				android:layout_height="wrap_content"
				android:text="@string/product_id"
				/>
			<EditText
				android:clickable="false"
				android:cursorVisible="false"
				android:focusable="false"
				android:focusableInTouchMode="false"
				android:layout_width="170sp"
				android:layout_height="wrap_content"
				android:id="@+id/barcode"
				android:inputType="none" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView
				android:layout_width="90sp"
				android:layout_height="wrap_content"
				android:text="@string/name"
				/>
			<EditText
				android:clickable="false"
				android:cursorVisible="false"
				android:focusable="false"
				android:focusableInTouchMode="false"
				android:layout_width="170sp"
				android:layout_height="wrap_content"
				android:id="@id/name"
				android:inputType="none"
			/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView
				android:layout_width="90sp"
				android:layout_height="wrap_content"
				android:text="@string/price_per_unit"
				/>
			<EditText
				android:clickable="false"
				android:cursorVisible="false"
				android:focusable="false"
				android:focusableInTouchMode="false"
				android:layout_width="170sp"
				android:layout_height="wrap_content"
				android:id="@+id/price"
				android:inputType="none" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView
				android:layout_width="90sp"
				android:layout_height="wrap_content"
				android:text="@string/quantity"
				/>
			<EditText
				android:layout_width="170sp"
				android:layout_height="wrap_content"
				android:inputType="number"
				android:id="@+id/Quantity"
				android:hint="@string/quantity"
				android:autofillHints="PLease Enter the Quantity of the Product" />
		</LinearLayout>
	</LinearLayout>
	
</LinearLayout>