<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<androidx.cardview.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:cardUseCompatPadding="true">
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:orientation="horizontal">
			<ImageView
				android:layout_gravity="center"
				android:layout_width="80sp"
				android:layout_height="80sp"
				android:src="@null"
				android:contentDescription="@null"
				android:layout_marginStart="10sp"
				android:id="@+id/image"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/barcode"
					android:layout_marginStart="100sp"
					/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="10sp"
					android:id="@+id/barcode"
					/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/name"
					android:layout_marginStart="100sp"
					/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="10sp"
					android:id="@+id/name"
					/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/quantity"
					android:layout_marginStart="100sp"
					/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="10sp"
					android:id="@+id/quantity"
					/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/price"
					android:layout_marginStart="100sp"
					/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="10sp"
					android:id="@+id/price"
					/>
			</LinearLayout>
		</LinearLayout>
	</androidx.cardview.widget.CardView>
</LinearLayout>